--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.0.1
+  flutter_beep: ^1.0.0
+  bloc: ^8.0.3
+  text_scroll: ^0.0.4
+  marquee: ^2.2.1
 
 dev_dependencies:
   flutter_test:
